--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "mongoose": "^5.2.4"
+    "mongodb": "^3.1.1",
+    "mongoose": "^5.2.4",
+    "textangular": "^1.5.16"
   }
 }
