--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "mongoose": "^5.2.4"
+    "immutable": "^3.8.2",
+    "mongodb": "^3.1.1",
+    "mongoose": "^5.2.4",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "slate": "^0.34.6",
+    "slate-react": "^0.13.3"
   }
 }
